# vector

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ansi_colors.h  ext_memset.h  fbtest.c  fbtest_prims.h  pallet_ansi.h  vcpkg-configuration.json  vcpkg.cmake  vcpkg.json
Design Docs/: gen.md
fbtest/: fbtest.c
oldsrc/: core.cpp  core.hpp  entity.cpp  entity.hpp
oldsrc/srcV2/engine/: common.hpp  renderer.hpp
src/: colour_utils.h  common.hpp  core.cpp  core.hpp  entity.hpp  main.cpp
src/engine/: common.hpp  core.cpp  core.hpp  renderer.cpp  renderer.hpp  vec2.cpp  vec2.hpp
